--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon server"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "date-fns": "^3.6.0",
+    "express": "^4.19.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
