--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "uuid": "^9.0.1"
